public class Aufgaben {

}
